VSE: Locking a channel/strip doesn't block all timing operators #110861

Closed
opened 2023-08-06 23:04:19 +02:00 by Matthew Hinson · 3 comments
Member

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.67

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-10 12:57, hash: 37d1d4cb07e6
Worked: (unknown)

Short description of error
If you lock a channel or strip in the VSE, certain operators like Grab as well as the Time panel in the Sidebar (Strip tab) get disabled. However, the following operators still work, even though they change the values in the disabled Time panel:

  • Slip Strip Contents (S)
  • Clear Strip Offset (Alt-O)
  • Swap Strip (Alt-Left, Alt-Right)
  • Split (K)
  • Hold Split (Shift-K)

The same goes for the "Blade" and "Retime" tools.

The "Insert Gaps" and "Remove Gaps" operators also still work, but in those cases, it seems to be intentional (mentioned in the tooltip).

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 536.67 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-07-10 12:57, hash: `37d1d4cb07e6` Worked: (unknown) **Short description of error** If you lock a channel or strip in the VSE, certain operators like Grab as well as the Time panel in the Sidebar (Strip tab) get disabled. However, the following operators still work, even though they change the values in the disabled Time panel: * Slip Strip Contents (S) * Clear Strip Offset (Alt-O) * Swap Strip (Alt-Left, Alt-Right) * Split (K) * Hold Split (Shift-K) The same goes for the "Blade" and "Retime" tools. The "Insert Gaps" and "Remove Gaps" operators also still work, but in those cases, it seems to be intentional (mentioned in the tooltip).
Matthew Hinson added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-06 23:04:20 +02:00
Member

Thanks for the report. Can confirm.
cc @iss

Thanks for the report. Can confirm. cc @iss

Technically these never worked correctly, so it is feature request-ish, but I agree, that this is buggy behavior. Remove gaps is quite complex already, it would be nice to simplify it even more, but I think, that working around locked strips would add much more complexity and possily performance issues.
Retiming is being worked on still and I won't make changes to current implementation.

Technically these never worked correctly, so it is feature request-ish, but I agree, that this is buggy behavior. Remove gaps is quite complex already, it would be nice to simplify it even more, but I think, that working around locked strips would add much more complexity and possily performance issues. Retiming is being worked on still and I won't make changes to current implementation.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-08-14 05:54:50 +02:00

@iss I don't know how many of these cases your fix has covered, but here's some old text of mine on the problem(ex. Expand mode should also respect locked strips):
image
Unlock isn't the only operator, tho. The Meta strip operators should properly also be working even though a strip is locked.

Expand/Overwrite gif attached:

@iss I don't know how many of these cases your fix has covered, but here's some old text of mine on the problem(ex. Expand mode should also respect locked strips): ![image](/attachments/752ed5f6-1ce2-4e4a-b5f4-4e5a892b0e89) Unlock isn't the only operator, tho. The Meta strip operators should properly also be working even though a strip is locked. Expand/Overwrite gif attached:
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#110861
No description provided.