Fix #110861: VSE operators disregards locked strips

Operators slip, swap and split operated on strips that are locked.